--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -94,11 +94,14 @@
                                                 <p class="card-text">
                                                     <%= review.comment %>
                                                 </p>
-
-                                                <form class="mb-3" method="POST"
-                                                    action="/listings/<%= list._id %>/reviews/<%= review._id %>?_method=DELETE">
-                                                    <button class="btn btn-sm btn-dark">Delete</button>
-                                                </form>
+                                                <div class="mb-3">
+                                                    <% if(currUser && currUser._id.equals(review.author._id)) { %>
+                                                        <form method="POST"
+                                                            action="/listings/<%= list._id %>/reviews/<%= review._id %>?_method=DELETE">
+                                                            <button class="btn btn-sm btn-dark">Delete</button>
+                                                        </form>
+                                                        <% } %>
+                                                </div>
                                             </div>
                                         </div>
                                         <% } %>
