--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,6 +2,7 @@
 
     <script>
         const listing = <%- JSON.stringify(list) %>;
+        const MAP_KEY = "<%= process.env.MAP_KEY %>";
     </script>
     <div class="row mt-3">
         <div class="col-md-8 offset-md-3">
